# test_llvm_openmp_nvptx

./: .gitignore  CMakeLists.txt  README.md  axpy.cu  run.cpp
